<resources>
    <string name="app_name">MeetWM</string>
    <string name="enter_your_phone_number_to_sign_in">Enter your phone number to sign in</string>
    <string name="welcome_to_meetwm">Welcome to MeetWM</string>
    <string name="verification">Verification</string>
    <string name="enter_the_otp_sent_to_xxxxxx">Enter the OTP sent to XXXXXX</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify">Verify</string>
    <string name="submit">Submit</string>
    <string name="continue_">Continue</string>
    <string name="enter_your_status">Enter your status</string>
    <string name="your_name">Your Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meetwm">MeetWM</string>
    <string name="contacts">Contacts</string>
    <string name="meet_with_me">Meet With Me!</string>
    <string name="today">Today</string>
    <string name="new_group">New Group</string>
</resources>