<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.otpVerify.OTPVerify">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:scaleType="center"
        android:src="@drawable/otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/allerta"
        android:text="@string/verification"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/allerta"
        android:text="@string/enter_the_otp_sent_to_xxxxxx"
        android:textColor="#727272"
        android:textSize="14sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/pinView"
        app:layout_constraintStart_toStartOf="parent" />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/allerta"
        app:cursorVisible="true"
        app:forceKeyboard="true"
        app:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pinHeight="60dp"
        app:pinLength="6"
        app:pinWidth="50dp"
        app:splitWidth="4dp"
        app:textSize="16sp" />

    <TextView
        android:id="@+id/resendOtpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/allerta"
        android:padding="8dp"
        android:text="Resend OTP"
        android:textColor="#009688"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinView" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:padding="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/resendOtpBtn"
        app:layout_constraintStart_toEndOf="@+id/resendOtpBtn"
        app:layout_constraintTop_toTopOf="@+id/resendOtpBtn"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/blue_background"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendOtpBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>